--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p> <a href = "projects.html"> -- My Projects -- </a> </p>
             <p> <a href = "experience.html"> -- Experience-- </a></p>
             <p> <a href = "contact.html"> -- Contact -- </a></p>
+            <p> <a href = "goals.html"> -- Goals for Site -- </a></p>
             </main>
         </div>
         </div>
