--- a/goals.html
+++ b/goals.html
@@ -1,4 +1,11 @@
 <hr>
+<h2>Current Goals:</h2>
+<ul>
+  <li>Try to make the portfolio just 1 page so far</li>
+  <li>Have it be a notepad that's scrollable, but keep actual page from scrolling</li>
+  <li>Create the notepad in Krita</li>
+  <li>After all of that, begin working on turning it into a flippable book</li>
+</ul>
 <h2>General things I'd like to have in the program:</h2>
 <ul>
   <li>Silly fidgety type things while browsing the website, like kojima type stuff</li>
