Added to the main page

--- a/index.html
+++ b/index.html
@@ -7,19 +7,196 @@
     <body>
         <div id="Book">
             <header>
-            <h1>My Portfolio</h1>
-            <h2>Ethan Baggett</h2>
+                <h1>My Portfolio</h1>
+                <h2>Ethan Baggett</h2>
             </header>
+
             <main>
-            <h2>Table of Contents</h2>
-            <p> <a href = "about.html"> -- About Me -- </a> </p>
-            <p> <a href = "projects.html"> -- My Projects -- </a> </p>
-            <p> <a href = "experience.html"> -- Experience-- </a></p>
-            <p> <a href = "contact.html"> -- Contact -- </a></p>
-            <p> <a href = "goals.html"> -- Goals for Site -- </a></p>
+                <div id="toc">
+                    <h2>Table of Contents</h2>
+                    <p> <a href = "about.html"> -- About Me -- </a> </p>
+                    <p> <a href = "projects.html"> -- My Projects -- </a> </p>
+                    <p> <a href = "experience.html"> -- Experience-- </a></p>
+                    <p> <a href = "contact.html"> -- Contact -- </a></p>
+                    <p> <a href = "goals.html"> -- Goals for Site -- </a></p>
+                </div>
+
+                <div id="about">
+                    <h1>About Me!</h1>
+
+                    <div id ="summary">
+                        <h2>Ethan Baggett (He/Him) (They/Them)</h2>
+                        <p>
+                        Hello! My name is Ethan and I'm an aspiring IT and Cyber-Security major who is a lover of all things art, 
+                        whether that be music, digital design, writing, video games, photography, and video editing!
+                        </p>
+                        <p>
+                        Looking for someone who possesses comprehensive knowledge of standard operating systems, 
+                        networking protocols and technical support procedures? 
+                        Or perhaps someone who is skilled in Java, Python, SQL, HTML, CSS, Javascript, Microsoft Office, and Adobe?
+                        </p>
+                        <p>
+                        Look no further! I'm a proactive & creative problem solver who's committed to fostering positive 
+                        professional relationships and identifying/resolving complex technical problems!
+                        </p>
+
+                        <p>You can find my resume <a href = "MyResume.pdf">here!</a></p>
+                    </div>
+
+                    <div id="expertise">
+                        <div id="interests1">
+                            <h2>Interests</h2>
+
+                            <ul id="interests1">
+                                <li>Programming</li>
+                                <li>Web Development</li>
+                                <li>Graphic Design</li>
+                                <li>Digital Design</li>
+                                <li>Video Production</li>
+                                <li>Game Development</li>
+                                <li>Software Development</li>
+                            </ul>
+
+                            <ul id="interests2">
+                                <li>Songwriting</li>
+                                <li>Guitar</li>
+                                <li>Piano</li>
+                                <li>Photography</li>
+                                <li>Writing</li>
+                                <li>Human Rights</li>
+                                <li>LGBTQ+ Rights</li>
+                            </ul>
+
+                        </div>
+
+                        <div id="skills">
+                            <h2>Skills</h2>
+
+                            <ul id ="skills1">
+                                <li>HTML</li>
+                                <li>CSS</li>
+                                <li>JavaScript</li>
+                                <li>Java</li>
+                                <li>GitHub</li>
+                                <li>Windows/Linux</li>
+                            </ul>
+
+                            <ul id ="skills2">
+                                <li>Python</li>
+                                <li>SQL</li>
+                                <li>Microsoft Office</li>
+                                <li>Adobe Products</li>
+                                <li>FL Studio</li>
+                                <li>Godot</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div id="projects">
+                    <h2>My Projects!</h2>
+                    <div id="Contact Book">
+                        <h3>Contact Book</h3>
+                        <p>
+                        This is a Java application that acts as a contact book. 
+                        The program allows the user to add, search, delete, and view contact.
+                        The program also features the ability to save your contacts to a text file that it automatically loads on boot.
+                        </p>
+                        <h3>To-Do List Manager</h3>
+                        <p>
+                        This is a Java application that acts as a To-Do List Manager. 
+                        The program allows the user to add tasks, remove tasks, mark tasks as completed, and view tasks.
+                        Within the remove, mark complete, and view tasks features, the user is able to search, sort, and filter through the lists of tasks.
+                        There is also a saving feature based off of login credentials so you can load an existing list and create a new one.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div id="experience">
+                    <div id="education">
+                        <h2>Education</h2>
+
+                        <h3>Bachelor of Information Systems/Cyber Security</h3>
+                        <p>University of Texas at Arlington | June 2024 - September 2026 </p>
+                        
+                        <h3>Associate of Arts in Information Systems</h3>
+                        <p>Tarrant County College District | August 2021 - December 2023</p>
+                    </div>
+
+                    <div id="work-history">
+                        <h2>Work History</h2>
+                        <h3>Assistant Manager | November 2023 - June 2025</h3>
+                        <h4>MINISO | International Retail Store Chain</h4>
+                        <ul id="work-summary">
+                            <li>
+                            Managed basic retail standards; cleaning, facing, and restocking store 
+                            whilst also ensuring to provide excellent customer service skills
+                            </li>
+                            <li>
+                            Rearranged displays of the stores at multiple different locations to be 
+                            eye-catching and well-organized to help boost sales and customer traffic
+                            </li>
+                            <li>
+                            Trained and guided employees in how to push for sales, make eye-catching displays
+                            and how to maintain upkeep of the store and its standards
+                            </li>
+                            <li>
+                            Guided my team accordingly and ensured to always foster a welcoming and safe environment 
+                            for every team-member through feedback, support, and ensuring that their input was
+                            heard, valued, and acted upon accordingly
+                            </li>
+                            <li>
+                            Oversaw the opening and closing of the store, through cleaning, counting registers/deposits,
+                            organizing, and maintaining the store to be up to standard for the next shift
+                            </li>
+                        </ul>
+
+                        <h3>Sales Lead/Photographer | March 2022 - May 2024</h3>
+                        <h4>America's Best Event Photography | Circuit Photography Service</h4>
+                        <ul id="work-summary">
+                            <li>
+                            Engaged with customers to build rapport and loyalty
+                            </li>
+                            <li>
+                            Provided excellent customer service skills to everyone, whether they be returning or new,
+                            which is proven by over 170+ positive 5-star reviews referencing me on the company's Google page
+                            </li>
+                            <li>
+                            Heightened sales through customer trust, knowledge of products/field, and persuasive sales tactics
+                            </li>
+                            <li>
+                            Collaborated with my team to ensure orders were delivered accurately/efficiently
+                            and that shoots went smoothly and without issue
+                            </li>
+                            <li>
+                            Photographed individual, family, and team photos with a DSLR camera for both indoor/outdoor shoots
+                            </li>
+                            <li>
+                            Traveled frequently to different long distance shoots all across Texas
+                            </li>
+                        </ul>
+                        
+                    </div>
+                </div>
+
+                <div id="contact">
+                    <h2>Send me a message!</h2>
+                    <h3>Name</h3>
+                    <h3>Email</h3>
+                    <h3>Message</h3>
+                    <div id="send-message">
+                        <p>Send Message!</p>
+                    </div>
+                    <img id="GitHub">
+                    <img id="Email">
+                    <img id="LinkedIn">
+                    <a href="goals.html">Want to see what else is in store?</a>
+                </div>
+
             </main>
         </div>
-        </div>
-    </body>
 
+    </body>
 </html>
